--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="header__nav">
+
+        </nav>
+    </header>
+    <main>
+        
+    </main>
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
